kgtkr/echo-server/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  ports:
    - port: 80
  selector:
    app.kubernetes.io/name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app
    spec:
      containers:
        - image: jmalloc/echo-server:v0.3.7
          name: app
          resources:
            requests:
              cpu: "10m"
              memory: "100Mi"
      restartPolicy: Always
